# videocontrol_recognition

./: .gitignore  javah_helper.bat  pom.xml
src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
src/main/cpp/cmake/: WinImage-KeyGen.html
src/main/kotlin/com/xqdd/app/: App.kt
src/main/kotlin/com/xqdd/view/: DrawRectangle.kt  MainView.kt
src/main/resources/natives/windows_32/: native-lib.exp  native-lib.lib
src/main/resources/natives/windows_64/: native-lib.exp  native-lib.lib
src/main/resources/rgb/: 1.rgb  10.rgb  11.rgb  12.rgb  13.rgb  14.rgb  15.rgb  16.rgb  17.rgb  18.rgb  19.rgb  2.rgb  20.rgb  21.rgb  22.rgb  23.rgb  24.rgb  25.rgb  26.rgb  27.rgb  28.rgb  29.rgb  3.rgb  30.rgb  31.rgb  32.rgb  33.rgb  34.rgb  35.rgb  36.rgb  37.rgb  38.rgb  39.rgb  4.rgb  40.rgb  41.rgb  42.rgb  43.rgb  44.rgb  45.rgb  (+53 more)
